<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            android:orientation="vertical"
            android:background="@color/lightGreen">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/login_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />
        <EditText
                android:id="@+id/edit_text_login"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="45sp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:hint="@string/login_hint" />
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
                android:id="@+id/password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_string"
                android:textColor="@color/red"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="10dp" />
        <EditText
                android:id="@+id/edit_text_password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:importantForAutofill="no"
                tools:ignore="LabelFor"
                android:hint="@string/password_hint" />
    </LinearLayout>
    <Button
            android:id="@+id/button_login_linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register_button"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@color/red" />
</LinearLayout>